# LLM_Projects

./: .gitignore  README.md  config.json  examples.ipynb  main.py  pyproject.toml  requirements.txt
DeepSeekCoder/: __init__.py  generate.py
index_storage/: default__vector_store.json  docstore.json  index_store.json
models/: __init__.py  base_generator.py  models.py
movie_review_data/: process_data.py
phi3B/: __init__.py  generate_onnx.py  rag_llama_index_query_with_pdf.py
utils/: __init__.py  csv_functions.py  download_save_huggingface_model.py  get_logger.py
